# Capricorn-x

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run.py
agent/: __init__.py  agent.py  events.py  executor.py  gateway.py  notification.py  scheduler.py
agent/channels/: __init__.py  feishu.py  manager.py
agent/webui/: app.py
agent/webui/.streamlit/: secrets.toml
capabilities/: __init__.py  capability_registry.py
capabilities/skills/: __init__.py  loader.py  manager.py  skill_tool.py
capabilities/skills/skills/code-review/: SKILL.md
capabilities/skills/skills/code_review/: SKILL.md
capabilities/skills/skills/document-management/: SKILL.md
capabilities/skills/skills/document_management/: SKILL.md
capabilities/skills/skills/frontend-dev/: SKILL.md
capabilities/skills/skills/fullstack-dev/: SKILL.md
capabilities/skills/skills/minimax-docx/: SKILL.md
capabilities/skills/skills/minimax-multimodal/: SKILL.md
capabilities/skills/skills/minimax-pdf/: SKILL.md
capabilities/tools/: __init__.py  registry.py
capabilities/tools/builtin/: __init__.py
capabilities/tools/mcp/: __init__.py  mcp_client.py  mcp_wrapper.py
capabilities/tools/workflow/: __init__.py  registry.py  workflow_wrapper.py
config/: __init__.py  config.json  settings.py
config/prompts/: bia.md  cron.md  system.md
config/prompts/channels/: feishu.md
config/prompts/roles/: executor.md  verifier.md
config/roles/: executor.yaml  verifier.yaml
core/: __init__.py  base_tool.py  base_workflow.py  consolidation.py  interfaces.py  paths.py  prompt_utils.py  sandbox.py  token_counter.py  trace.py  utils.py
memory/: __init__.py  history.py  long_term.py  session.py
tests/: conftest.py
tests/test_agent/: test_agent.py  test_gateway.py  test_notification.py
tests/test_capabilities/: test_capability_registry.py  test_file_tools.py  test_search_tools.py  test_skill_loader.py  test_skill_manager.py  test_tool_registry.py
tests/test_config/: test_env_resolution.py  test_settings.py
tests/test_core/: test_base_tool.py  test_paths.py  test_prompt_utils.py  test_sandbox.py  test_token_counter.py  test_utils.py
tests/test_memory/: test_history.py  test_long_term.py  test_session.py
tests/test_team_cron/: test_check_status_tool.py  test_cron_parsing.py  test_cron_scheduler.py  test_cron_tool.py  test_get_result_tool.py  test_spawn_tool.py  test_task_manage_tool.py
(+28 files in other folders)
