[project]
name = "capricorn"
version = "0.1.0"
description = "基于 LangGraph 的可扩展 LLM Agent 系统"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    {name = "Capricorn Contributors"}
]
keywords = ["langgraph", "llm-agent", "agent", "mcp", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3",
]

dependencies = [
    "langchain-core>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-openai>=0.2.0",
    "langgraph>=0.2.0",
    "pydantic>=2.0.0",
    "loguru>=0.7.0",
    "mcp>=1.0.0",
    "PyYAML>=6.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
]
tiktoken = [
    "tiktoken>=0.5.0",
]

[project.scripts]
capricorn = "run:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"